design/common.blocks/input/_theme/input_theme_islands.styl
ctx = '.input_theme_islands'
{ctx} {
    font-family: Arial, Helvetica, sans-serif;

    position: relative;

    display: inline-block;

    background: rgba(0, 0, 0, 0.2);

    /* Decorative element (inner background) */
    &:before
    {
        position: absolute;
        top: 1px;
        right: 1px;
        bottom: 1px;
        left: 1px;

        content: '';

        background: #fff;
    }

    .input__box
    {
        position: relative;

        display: block;

        -webkit-touch-callout: none;

        user-select: none;
    }

    .input__control
    {
        font: inherit;
        line-height: inherit;

        position: relative;

        display: inline-block;

        box-sizing: border-box;
        padding: 0;
        width: 100%;

        border: 0;
        outline: none;
        background: none;

        -webkit-appearance: none;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

        /* лишние отступы у текста */
        &::-webkit-search-decoration
        {
            -webkit-appearance: none;
        }

        /* нативный крестик */
        &::-webkit-search-cancel-button
        {
            display: none;
        }

        &::-webkit-input-placeholder
        {
            color: #999;
            text-indent: 0;
        }

        &::-moz-placeholder
        {
            opacity: 1;
            color: #999;
        }

        &::-ms-clear
        {
            display: none;
        }
    }

    &.input_has-clear .input__control
    {
        text-overflow: ellipsis;
    }

    .input__clear
    {
        position: absolute;
        top: 0;
        right: 0;

        cursor: text;
        transition: opacity 0.1s ease-out;

        opacity: 0;
        background: 50% 50% no-repeat;

        &_visible
        {
            opacity: 0.3;

            &:hover
            {
                cursor: pointer;

                opacity: 1;
            }
        }
    }

    &.input_focused
    {
        z-index: 1;

        background: rgba(178, 142, 0, 0.6);
        box-shadow: 0 0 0 1px #ffcc00, inset 0 0 0 1px #ffcc00;
    }

    &.input_disabled
    {
        background: rgba(0, 0, 0, 0.08);

        &:before,
        .input__clear
        {
            display: none;
        }

        .input__box,
        .input__control
        {
            color: rgba(0, 0, 0, 0.4);
            cursor: default;
        }
    }

    &.input_size_s .input__clear,
    &.input_size_m .input__clear
    {
        width: 24px;
        height: 24px;

        background-image: url(../../theme/_islands/clear_size_s.svg);
        background-position: 7px 50%;
    }

    &.input_size_s
    {
        font-size: 13px;
        line-height: 16px;

        .input__control
        {
            height: 24px;
            padding-left: 6px;
        }

        &.input_has-clear .input__box
        {
            padding-right: 24px;
        }

    }

    &.input_size_m
    {
        font-size: 13px;
        line-height: 16px;

        .input__control
        {
            height: 28px;
            padding-left: 8px;
        }

        &.input_has-clear .input__box
        {
            padding-right: 28px;
        }

        .input__clear
        {
            width: 28px;
            height: 28px;

            background-position: 9px 50%;
        }
    }

    &.input_size_l .input__clear,
    &.input_size_xl .input__clear
    {
        width: 32px;
        height: 32px;

        background-image: url(../../theme/_islands/clear_size_l.svg);
        background-position: 9px 50%;
    }

    &.input_size_l
    {
        font-size: 15px;
        line-height: 18px;

        .input__control
        {
            height: 32px;
            padding-left: 10px;
        }

        &.input_has-clear .input__box
        {
            padding-right: 32px;
        }
    }

    &.input_size_xl
    {
        font-size: 18px;
        line-height: 22px;

        .input__control
        {
            height: 38px;
            padding-left: 12px;
        }

        &.input_has-clear .input__box
        {
            padding-right: 38px;
        }

        .input__clear
        {
            width: 38px;
            height: 38px;

            background-position: 12px 50%;
        }
    }

    &.input_width_available
    {
        width: 100%;
    }

    &.input_type_password .input__control
    {
        text-overflow: clip;
    }
}

.control-group
{
    {ctx} {
        &:before
        {
            right: 0;
        }

        &.input_focused:before
        {
            right: 1px;
        }
    }

    > {ctx}:last-child,
    > :last-child {ctx}
    {
        &:before
        {
            right: 1px;
        }
    }
}

